<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="org.treebolic.one.sql.MainActivity">

	<item
		android:id="@+id/action_settings"
		android:title="@string/title_settings"
		app:showAsAction="ifRoom"/>
	<item
		android:id="@+id/action_treebolic"
		android:title="@string/title_treebolic"
		app:showAsAction="never"/>
	<item
		android:id="@+id/action_peek"
		android:title="@string/title_peek"
		app:showAsAction="never"/>
	<item
		android:id="@+id/action_reset"
		android:title="@string/title_reset"
		app:showAsAction="never"/>
	<item
		android:id="@+id/action_download"
		android:title="@string/title_download"
		app:showAsAction="never"/>
	<item
		android:id="@+id/action_tips"
		android:title="@string/title_tips"
		app:showAsAction="never"/>
	<item
		android:id="@+id/action_help"
		android:title="@string/title_help"
		app:showAsAction="never"/>
	<item
		android:id="@+id/action_about"
		android:title="@string/title_about"
		app:showAsAction="never"/>
	<item
		android:id="@+id/action_app_settings"
		android:title="@string/title_activity_app_settings"
		app:showAsAction="never"/>
	<item
		android:id="@+id/action_finish"
		android:title="@string/title_finish"
		app:showAsAction="never"/>
	<item
		android:id="@+id/action_kill"
		android:title="@string/title_kill"
		app:showAsAction="never"/>

</menu>